<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ConstraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".custom">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="38dp"
        app:layout_constraintBottom_toBottomOf="@+id/btn_submit2"
        app:layout_constraintEnd_toStartOf="@+id/guideline7"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guideline6"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        app:layout_constraintVertical_bias="0.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/custom_bd"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:gravity="center"
                android:text="@string/custom_bd"
                android:textStyle="bold"
                android:textColor="#000000"
                android:textSize="32sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btn_p"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:layout_marginEnd="4dp"
                    android:text="@string/p" />

                <Button
                    android:id="@+id/btn_r"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="10"
                    android:layout_marginStart="2dp"
                    android:layout_marginEnd="2dp"
                    android:text="@string/r" />

                <Button
                    android:id="@+id/btn_a"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="6"
                    android:layout_marginStart="4dp"
                    android:text="@string/amount" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/tx_ta"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="20"
                    android:text="@string/ta"
                    android:textColor="#000"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/et_ta"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/tab"
                    android:inputType="numberDecimal" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/tx_np"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="5"
                    android:text="@string/np"
                    android:textColor="#000"
                    android:textSize="18sp" />

                <Button
                    android:id="@+id/btn_minus"
                    android:layout_width="40dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="-" />

                <TextView
                    android:id="@+id/tx_cnp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="20"
                    android:gravity="center"
                    android:text="2"
                    android:textColor="#000"
                    android:textSize="18sp" />

                <Button
                    android:id="@+id/btn_plus"
                    android:layout_width="40dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="+" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/show"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="5"
                android:orientation="vertical" />
        </LinearLayout>

    </ScrollView>

    <Button
        android:id="@+id/btn_submit2"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:layout_marginBottom="20dp"
        android:elevation="10dp"
        android:text="@string/submit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guideline7"
        app:layout_constraintStart_toStartOf="@+id/guideline6" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.03" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.97" />
</androidx.constraintlayout.widget.ConstraintLayout>