<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".result">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView

        android:id="@+id/result_title2"
        android:layout_width="0dp"
        android:layout_height="80dp"
        android:gravity="center"
        android:text="@string/result"
        android:textStyle="bold"
        android:textColor="#000000"
        android:textSize="32sp"
        app:layout_constraintEnd_toStartOf="@+id/guideline9"
        app:layout_constraintStart_toStartOf="@+id/guideline8"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <TextView
        android:id="@+id/ta2"
        android:layout_width="0dp"
        android:layout_height="54dp"
        android:layout_marginTop="12dp"
        android:gravity="center_vertical"
        android:text="@string/ta"
        android:textColor="#000000"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/guideline10"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guideline8"
        app:layout_constraintTop_toBottomOf="@+id/result_title2" />

    <TextView
        android:id="@+id/tv_ta"
        android:layout_width="0dp"
        android:layout_height="54dp"
        android:gravity="center"
        android:text=""
        android:textColor="#000000"
        android:textSize="18sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/ta2"
        app:layout_constraintEnd_toStartOf="@+id/guideline9"
        app:layout_constraintStart_toStartOf="@+id/guideline10" />

    <TextView
        android:id="@+id/np1"
        android:layout_width="0dp"
        android:layout_height="54dp"
        android:layout_marginTop="10dp"
        android:gravity="center_vertical"
        android:text="@string/numperson"
        android:textColor="#000000"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/guideline10"
        app:layout_constraintStart_toStartOf="@+id/guideline8"
        app:layout_constraintTop_toBottomOf="@+id/ta2" />

    <TextView
        android:id="@+id/tv_np"
        android:layout_width="0dp"
        android:layout_height="54dp"
        android:gravity="center"
        android:text=""
        android:textColor="#000000"
        android:textSize="18sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/np1"
        app:layout_constraintEnd_toStartOf="@+id/guideline9"
        app:layout_constraintStart_toStartOf="@+id/guideline10" />

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="38dp"
        app:layout_constraintBottom_toBottomOf="@+id/btn_share"
        app:layout_constraintEnd_toStartOf="@+id/guideline9"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/guideline8"
        app:layout_constraintTop_toBottomOf="@+id/np1"
        app:layout_constraintVertical_bias="0.0">

        <LinearLayout
            android:id="@+id/ll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/btn_home"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:layout_marginBottom="20dp"
        android:text="@string/back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guideline9"
        app:layout_constraintStart_toStartOf="@+id/guideline8" />

    <Button
        android:id="@+id/btn_share"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="10dp"
        android:text="@string/share"
        app:layout_constraintBottom_toTopOf="@+id/btn_home"
        app:layout_constraintEnd_toStartOf="@+id/guideline9"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/guideline8" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.55" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.03" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.97" />

</androidx.constraintlayout.widget.ConstraintLayout>